Substituindo Collectors para Stream